// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`groupMultiselect (isCI = false) > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
◆  Select a fruit
│  ◻ group1
│  └ ◻ group1value0
│  ◻ group2
│  └ ◻ group2value0
└
",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = false) > can deselect an option 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  │ ◼ group1value0",
  "[3B",
  "[999D[6A",
  "[2B",
  "[J",
  "│  ◼ group1
│  │ ◼ group1value0
│  └ ◼ group1value1
└
",
  "[999D[6A",
  "[2B",
  "[J",
  "│  ◻ group1
│  │ ◼ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = false) > can select a group 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[2B",
  "[J",
  "│  ◼ group1
│  │ ◼ group1value0
│  └ ◼ group1value1
└
",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = false) > can select a group by selecting all members 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  │ ◼ group1value0",
  "[3B",
  "[999D[6A",
  "[2B",
  "[J",
  "│  ◼ group1
│  │ ◼ group1value0
│  └ ◼ group1value1
└
",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = false) > can select multiple options 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  │ ◻ group1value1
│  └ ◻ group1value2
└
",
  "[999D[7A",
  "[3B",
  "[2K[G",
  "│  │ ◼ group1value0",
  "[4B",
  "[999D[7A",
  "[4B",
  "[2K[G",
  "│  │ ◼ group1value1",
  "[3B",
  "[999D[7A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = false) > can submit empty selection when require = false 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = false) > cursorAt sets initial selection 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[4B",
  "[2K[G",
  "│  └ ◼ group1value1",
  "[2B",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value1",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = false) > groupSpacing > negative spacing is ignored 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  └ ◻ group1value0
│  ◻ group2
│  └ ◻ group2value0
└
",
  "[999D[7A",
  "[2B",
  "[J",
  "│  ◼ group1
│  └ ◼ group1value0
│  ◻ group2
│  └ ◻ group2value0
└
",
  "[999D[7A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = false) > groupSpacing > renders spaced groups 1`] = `
[
  "[?25l",
  "│
◆  foo
│
│
│  ◻ group1
│  └ ◻ group1value0
│
│
│  ◻ group2
│  └ ◻ group2value0
└
",
  "[999D[11A",
  "[4B",
  "[J",
  "│  ◼ group1
│  └ ◼ group1value0
│
│
│  ◻ group2
│  └ ◻ group2value0
└
",
  "[999D[11A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = false) > initial values can be set 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◼ group1value1
└
",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value1",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = false) > renders error when nothing selected 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[1B",
  "[J",
  "▲  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└  Please select at least one option.
   Press  space  to select,  enter  to submit
",
  "[999D[7A",
  "[1B",
  "[J",
  "◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  │ ◼ group1value0",
  "[3B",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = false) > renders message with options 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
│  ◻ group2
│  └ ◻ group2value0
└
",
  "[999D[8A",
  "[3B",
  "[2K[G",
  "│  │ ◼ group1value0",
  "[5B",
  "[999D[8A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = false) > selectableGroups = false > cannot select groups 1`] = `
[
  "[?25l",
  "│
◆  foo
│   group1
│    ◻ group1value0
│    ◻ group1value1
└
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│    ◼ group1value0",
  "[3B",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = false) > selectableGroups = false > selecting all members of group does not select group 1`] = `
[
  "[?25l",
  "│
◆  foo
│   group1
│    ◻ group1value0
│    ◻ group1value1
└
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│    ◼ group1value0",
  "[3B",
  "[999D[6A",
  "[4B",
  "[2K[G",
  "│    ◼ group1value1",
  "[2B",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = false) > values can be non-primitive 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ value0
│  └ ◻ value1
└
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  │ ◼ value0",
  "[3B",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  value0",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
◆  Select a fruit
│  ◻ group1
│  └ ◻ group1value0
│  ◻ group2
│  └ ◻ group2value0
└
",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > can deselect an option 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  │ ◼ group1value0",
  "[3B",
  "[999D[6A",
  "[2B",
  "[J",
  "│  ◼ group1
│  │ ◼ group1value0
│  └ ◼ group1value1
└
",
  "[999D[6A",
  "[2B",
  "[J",
  "│  ◻ group1
│  │ ◼ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > can select a group 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[2B",
  "[J",
  "│  ◼ group1
│  │ ◼ group1value0
│  └ ◼ group1value1
└
",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > can select a group by selecting all members 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  │ ◼ group1value0",
  "[3B",
  "[999D[6A",
  "[2B",
  "[J",
  "│  ◼ group1
│  │ ◼ group1value0
│  └ ◼ group1value1
└
",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > can select multiple options 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  │ ◻ group1value1
│  └ ◻ group1value2
└
",
  "[999D[7A",
  "[3B",
  "[2K[G",
  "│  │ ◼ group1value0",
  "[4B",
  "[999D[7A",
  "[4B",
  "[2K[G",
  "│  │ ◼ group1value1",
  "[3B",
  "[999D[7A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > can submit empty selection when require = false 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > cursorAt sets initial selection 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[4B",
  "[2K[G",
  "│  └ ◼ group1value1",
  "[2B",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value1",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > groupSpacing > negative spacing is ignored 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  └ ◻ group1value0
│  ◻ group2
│  └ ◻ group2value0
└
",
  "[999D[7A",
  "[2B",
  "[J",
  "│  ◼ group1
│  └ ◼ group1value0
│  ◻ group2
│  └ ◻ group2value0
└
",
  "[999D[7A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > groupSpacing > renders spaced groups 1`] = `
[
  "[?25l",
  "│
◆  foo
│
│
│  ◻ group1
│  └ ◻ group1value0
│
│
│  ◻ group2
│  └ ◻ group2value0
└
",
  "[999D[11A",
  "[4B",
  "[J",
  "│  ◼ group1
│  └ ◼ group1value0
│
│
│  ◻ group2
│  └ ◻ group2value0
└
",
  "[999D[11A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > initial values can be set 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◼ group1value1
└
",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value1",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > renders error when nothing selected 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[1B",
  "[J",
  "▲  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└  Please select at least one option.
   Press  space  to select,  enter  to submit
",
  "[999D[7A",
  "[1B",
  "[J",
  "◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
└
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  │ ◼ group1value0",
  "[3B",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > renders message with options 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ group1value0
│  └ ◻ group1value1
│  ◻ group2
│  └ ◻ group2value0
└
",
  "[999D[8A",
  "[3B",
  "[2K[G",
  "│  │ ◼ group1value0",
  "[5B",
  "[999D[8A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > selectableGroups = false > cannot select groups 1`] = `
[
  "[?25l",
  "│
◆  foo
│   group1
│    ◻ group1value0
│    ◻ group1value1
└
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│    ◼ group1value0",
  "[3B",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > selectableGroups = false > selecting all members of group does not select group 1`] = `
[
  "[?25l",
  "│
◆  foo
│   group1
│    ◻ group1value0
│    ◻ group1value1
└
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│    ◼ group1value0",
  "[3B",
  "[999D[6A",
  "[4B",
  "[2K[G",
  "│    ◼ group1value1",
  "[2B",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  group1value0, group1value1",
  "
",
  "[?25h",
]
`;

exports[`groupMultiselect (isCI = true) > values can be non-primitive 1`] = `
[
  "[?25l",
  "│
◆  foo
│  ◻ group1
│  │ ◻ value0
│  └ ◻ value1
└
",
  "[999D[6A",
  "[3B",
  "[2K[G",
  "│  │ ◼ value0",
  "[3B",
  "[999D[6A",
  "[1B",
  "[J",
  "◇  foo
│  value0",
  "
",
  "[?25h",
]
`;
